@@ -26,6 +26,7 @@
 - API Change: ScrollPane now supports all combinations of scrollBarsOnTop and fadeScrollBars.
 - API Addition: Added new methods with a "deg" suffix in the method's name for all Vector2 degrees-based methods and deprecated the old ones.
 - API Change: Vector2 angleRad(Vector2) now correctly return counter-clockwise angles.
+- API Addition: Added Slider#setVisualPercent.
 
 [1.9.11]
 - Update to MobiVM 2.3.8
